--- a/src/table-list-field/table-list-field.component.html
+++ b/src/table-list-field/table-list-field.component.html
@@ -3,6 +3,7 @@
     <table class="table editable-inner-table">
       <thead class="thead-inverse">
         <tr>
+          <th></th>
           <th *ngFor="let key of keys | addAlwaysShowFields:schema.items | filterAndSortBySchema:schema.items; trackBy:trackByFunction">
             {{key | underscoreToSpace}}
           </th>
@@ -13,8 +14,12 @@
 
         </tr>
       </thead>
-      <tr *ngFor="let row of values; let i = index; trackBy:trackByFunction" [id]="getElementPathString(i)">
+      <tr *ngFor="let row of values; let i = index; trackBy:trackByFunction" [id]="getElementPathString(i)" draggable="true"
+          (drop)="drop($event, i)" (dragstart)="drag($event, i)" (dragover)="allowDrop($event)">
         <!-- Element value -->
+        <td class="dragableClass">
+          <span (click)="document.getElementById(getElementPathString(i)).dispatchEvent(ondragstart)">&#x2261;</span>
+        </td>
         <td *ngFor="let key of keys | addAlwaysShowFields:schema.items | filterAndSortBySchema:schema.items; trackBy:trackByFunction" [style.width]="schema.items.properties[key]['x_editor_column_width'] + '%'">
           <any-type-field [value]="row.get(key) | selfOrEmpty:schema.items.properties[key]" [schema]="schema.items.properties[key]"
             [path]="getValuePath(i, key)"></any-type-field>
